target/generated-sources/antlr4/XQParser.java
// Generated from XQParser.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XQParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLOSECURL=34, EQUALITY=26, DOUBLESLASH=4, WHERE=11, STAR=19, DOC=2, OPENSQ=23, 
		OPENBRACKET=5, FOR=9, SATISFIES=29, OPENCURL=33, DOUBLEDOT=21, NOT=17, 
		ID=36, AND=15, SINGLESLASH=3, VARNAME=38, EMPTY=30, CLOSEBRACKET=6, AT=22, 
		QUOTE=1, WS=35, IN=13, COMMA=7, IS=14, SOME=28, TXT=8, CLOSETAG=32, EQUAL=25, 
		OR=16, ASSIGN=27, RETURN=12, STRINGCONST=37, CLOSESQ=24, OPENTAG=31, EQ=18, 
		DOT=20, LET=10;
	public static final String[] tokenNames = {
		"<INVALID>", "QUOTE", "DOC", "'/'", "'//'", "'('", "')'", "','", "'text()'", 
		"FOR", "LET", "WHERE", "RETURN", "IN", "IS", "AND", "OR", "NOT", "EQ", 
		"'*'", "'.'", "'..'", "'@'", "'['", "']'", "'='", "'=='", "':='", "SOME", 
		"SATISFIES", "EMPTY", "OPENTAG", "'>'", "'{'", "'}'", "WS", "ID", "STRINGCONST", 
		"VARNAME"
	};
	public static final int
		RULE_ap = 0, RULE_rp = 1, RULE_f = 2, RULE_forClause = 3, RULE_letClause = 4, 
		RULE_whereClause = 5, RULE_returnClause = 6, RULE_cond = 7, RULE_xq = 8;
	public static final String[] ruleNames = {
		"ap", "rp", "f", "forClause", "letClause", "whereClause", "returnClause", 
		"cond", "xq"
	};

	@Override
	public String getGrammarFileName() { return "XQParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public XQParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ApContext extends ParserRuleContext {
		public ApContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ap; }
	 
		public ApContext() { }
		public void copyFrom(ApContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ApDoubleSlashContext extends ApContext {
		public Token FILENAME;
		public TerminalNode STRINGCONST() { return getToken(XQParser.STRINGCONST, 0); }
		public TerminalNode OPENBRACKET() { return getToken(XQParser.OPENBRACKET, 0); }
		public RpContext rp() {
			return getRuleContext(RpContext.class,0);
		}
		public TerminalNode CLOSEBRACKET() { return getToken(XQParser.CLOSEBRACKET, 0); }
		public TerminalNode DOC() { return getToken(XQParser.DOC, 0); }
		public TerminalNode DOUBLESLASH() { return getToken(XQParser.DOUBLESLASH, 0); }
		public ApDoubleSlashContext(ApContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterApDoubleSlash(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitApDoubleSlash(this);
		}
	}
	public static class ApSlashContext extends ApContext {
		public Token FILENAME;
		public TerminalNode STRINGCONST() { return getToken(XQParser.STRINGCONST, 0); }
		public TerminalNode OPENBRACKET() { return getToken(XQParser.OPENBRACKET, 0); }
		public RpContext rp() {
			return getRuleContext(RpContext.class,0);
		}
		public TerminalNode CLOSEBRACKET() { return getToken(XQParser.CLOSEBRACKET, 0); }
		public TerminalNode DOC() { return getToken(XQParser.DOC, 0); }
		public TerminalNode SINGLESLASH() { return getToken(XQParser.SINGLESLASH, 0); }
		public ApSlashContext(ApContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterApSlash(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitApSlash(this);
		}
	}

	public final ApContext ap() throws RecognitionException {
		ApContext _localctx = new ApContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ap);
		try {
			setState(30);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new ApSlashContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(18); match(DOC);
				setState(19); match(OPENBRACKET);
				setState(20); ((ApSlashContext)_localctx).FILENAME = match(STRINGCONST);
				setState(21); match(CLOSEBRACKET);
				setState(22); match(SINGLESLASH);
				setState(23); rp(0);
				}
				break;
			case 2:
				_localctx = new ApDoubleSlashContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(24); match(DOC);
				setState(25); match(OPENBRACKET);
				setState(26); ((ApDoubleSlashContext)_localctx).FILENAME = match(STRINGCONST);
				setState(27); match(CLOSEBRACKET);
				setState(28); match(DOUBLESLASH);
				setState(29); rp(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RpContext extends ParserRuleContext {
		public RpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rp; }
	 
		public RpContext() { }
		public void copyFrom(RpContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RpParentContext extends RpContext {
		public TerminalNode DOUBLEDOT() { return getToken(XQParser.DOUBLEDOT, 0); }
		public RpParentContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpParent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpParent(this);
		}
	}
	public static class RpCurrContext extends RpContext {
		public TerminalNode DOT() { return getToken(XQParser.DOT, 0); }
		public RpCurrContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpCurr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpCurr(this);
		}
	}
	public static class RpStarContext extends RpContext {
		public TerminalNode STAR() { return getToken(XQParser.STAR, 0); }
		public RpStarContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpStar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpStar(this);
		}
	}
	public static class RpAttributeContext extends RpContext {
		public TerminalNode ID() { return getToken(XQParser.ID, 0); }
		public TerminalNode AT() { return getToken(XQParser.AT, 0); }
		public RpAttributeContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpAttribute(this);
		}
	}
	public static class RpFilterContext extends RpContext {
		public TerminalNode CLOSESQ() { return getToken(XQParser.CLOSESQ, 0); }
		public RpContext rp() {
			return getRuleContext(RpContext.class,0);
		}
		public TerminalNode OPENSQ() { return getToken(XQParser.OPENSQ, 0); }
		public FContext f() {
			return getRuleContext(FContext.class,0);
		}
		public RpFilterContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpFilter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpFilter(this);
		}
	}
	public static class RpDoubleSlashContext extends RpContext {
		public RpContext left;
		public RpContext right;
		public List<RpContext> rp() {
			return getRuleContexts(RpContext.class);
		}
		public RpContext rp(int i) {
			return getRuleContext(RpContext.class,i);
		}
		public TerminalNode DOUBLESLASH() { return getToken(XQParser.DOUBLESLASH, 0); }
		public RpDoubleSlashContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpDoubleSlash(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpDoubleSlash(this);
		}
	}
	public static class RpBracketContext extends RpContext {
		public TerminalNode OPENBRACKET() { return getToken(XQParser.OPENBRACKET, 0); }
		public TerminalNode CLOSEBRACKET() { return getToken(XQParser.CLOSEBRACKET, 0); }
		public RpContext rp() {
			return getRuleContext(RpContext.class,0);
		}
		public RpBracketContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpBracket(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpBracket(this);
		}
	}
	public static class RpTagnameContext extends RpContext {
		public TerminalNode ID() { return getToken(XQParser.ID, 0); }
		public RpTagnameContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpTagname(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpTagname(this);
		}
	}
	public static class RpSlashContext extends RpContext {
		public RpContext left;
		public RpContext right;
		public List<RpContext> rp() {
			return getRuleContexts(RpContext.class);
		}
		public RpContext rp(int i) {
			return getRuleContext(RpContext.class,i);
		}
		public TerminalNode SINGLESLASH() { return getToken(XQParser.SINGLESLASH, 0); }
		public RpSlashContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpSlash(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpSlash(this);
		}
	}
	public static class RpCommaContext extends RpContext {
		public RpContext left;
		public RpContext right;
		public List<RpContext> rp() {
			return getRuleContexts(RpContext.class);
		}
		public TerminalNode COMMA() { return getToken(XQParser.COMMA, 0); }
		public RpContext rp(int i) {
			return getRuleContext(RpContext.class,i);
		}
		public RpCommaContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpComma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpComma(this);
		}
	}
	public static class RpTxtContext extends RpContext {
		public TerminalNode TXT() { return getToken(XQParser.TXT, 0); }
		public RpTxtContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpTxt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpTxt(this);
		}
	}

	public final RpContext rp() throws RecognitionException {
		return rp(0);
	}

	private RpContext rp(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		RpContext _localctx = new RpContext(_ctx, _parentState);
		RpContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_rp, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			switch (_input.LA(1)) {
			case ID:
				{
				_localctx = new RpTagnameContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(33); match(ID);
				}
				break;
			case STAR:
				{
				_localctx = new RpStarContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(34); match(STAR);
				}
				break;
			case DOT:
				{
				_localctx = new RpCurrContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(35); match(DOT);
				}
				break;
			case DOUBLEDOT:
				{
				_localctx = new RpParentContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(36); match(DOUBLEDOT);
				}
				break;
			case TXT:
				{
				_localctx = new RpTxtContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(37); match(TXT);
				}
				break;
			case AT:
				{
				_localctx = new RpAttributeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(38); match(AT);
				setState(39); match(ID);
				}
				break;
			case OPENBRACKET:
				{
				_localctx = new RpBracketContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(40); match(OPENBRACKET);
				setState(41); rp(0);
				setState(42); match(CLOSEBRACKET);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(62);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(60);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new RpSlashContext(new RpContext(_parentctx, _parentState));
						((RpSlashContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_rp);
						setState(46);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(47); match(SINGLESLASH);
						setState(48); ((RpSlashContext)_localctx).right = rp(5);
						}
						break;
					case 2:
						{
						_localctx = new RpDoubleSlashContext(new RpContext(_parentctx, _parentState));
						((RpDoubleSlashContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_rp);
						setState(49);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(50); match(DOUBLESLASH);
						setState(51); ((RpDoubleSlashContext)_localctx).right = rp(4);
						}
						break;
					case 3:
						{
						_localctx = new RpCommaContext(new RpContext(_parentctx, _parentState));
						((RpCommaContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_rp);
						setState(52);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(53); match(COMMA);
						setState(54); ((RpCommaContext)_localctx).right = rp(2);
						}
						break;
					case 4:
						{
						_localctx = new RpFilterContext(new RpContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_rp);
						setState(55);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(56); match(OPENSQ);
						setState(57); f(0);
						setState(58); match(CLOSESQ);
						}
						break;
					}
					} 
				}
				setState(64);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class FContext extends ParserRuleContext {
		public FContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f; }
	 
		public FContext() { }
		public void copyFrom(FContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FEqualContext extends FContext {
		public RpContext left;
		public RpContext right;
		public List<RpContext> rp() {
			return getRuleContexts(RpContext.class);
		}
		public RpContext rp(int i) {
			return getRuleContext(RpContext.class,i);
		}
		public TerminalNode EQUAL() { return getToken(XQParser.EQUAL, 0); }
		public TerminalNode EQ() { return getToken(XQParser.EQ, 0); }
		public FEqualContext(FContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterFEqual(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitFEqual(this);
		}
	}
	public static class FNotContext extends FContext {
		public TerminalNode NOT() { return getToken(XQParser.NOT, 0); }
		public FContext f() {
			return getRuleContext(FContext.class,0);
		}
		public FNotContext(FContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterFNot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitFNot(this);
		}
	}
	public static class FAndContext extends FContext {
		public FContext left;
		public FContext right;
		public FContext f(int i) {
			return getRuleContext(FContext.class,i);
		}
		public TerminalNode AND() { return getToken(XQParser.AND, 0); }
		public List<FContext> f() {
			return getRuleContexts(FContext.class);
		}
		public FAndContext(FContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterFAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitFAnd(this);
		}
	}
	public static class FIsContext extends FContext {
		public RpContext left;
		public RpContext right;
		public TerminalNode EQUALITY() { return getToken(XQParser.EQUALITY, 0); }
		public List<RpContext> rp() {
			return getRuleContexts(RpContext.class);
		}
		public RpContext rp(int i) {
			return getRuleContext(RpContext.class,i);
		}
		public TerminalNode IS() { return getToken(XQParser.IS, 0); }
		public FIsContext(FContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterFIs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitFIs(this);
		}
	}
	public static class FRpContext extends FContext {
		public RpContext rp() {
			return getRuleContext(RpContext.class,0);
		}
		public FRpContext(FContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterFRp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitFRp(this);
		}
	}
	public static class FBracketContext extends FContext {
		public TerminalNode OPENBRACKET() { return getToken(XQParser.OPENBRACKET, 0); }
		public TerminalNode CLOSEBRACKET() { return getToken(XQParser.CLOSEBRACKET, 0); }
		public FContext f() {
			return getRuleContext(FContext.class,0);
		}
		public FBracketContext(FContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterFBracket(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitFBracket(this);
		}
	}
	public static class FOrContext extends FContext {
		public FContext left;
		public FContext right;
		public FContext f(int i) {
			return getRuleContext(FContext.class,i);
		}
		public TerminalNode OR() { return getToken(XQParser.OR, 0); }
		public List<FContext> f() {
			return getRuleContexts(FContext.class);
		}
		public FOrContext(FContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterFOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitFOr(this);
		}
	}

	public final FContext f() throws RecognitionException {
		return f(0);
	}

	private FContext f(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		FContext _localctx = new FContext(_ctx, _parentState);
		FContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_f, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				_localctx = new FNotContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(66); match(NOT);
				setState(67); f(1);
				}
				break;
			case 2:
				{
				_localctx = new FRpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(68); rp(0);
				}
				break;
			case 3:
				{
				_localctx = new FEqualContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(69); ((FEqualContext)_localctx).left = rp(0);
				setState(70); match(EQUAL);
				setState(71); ((FEqualContext)_localctx).right = rp(0);
				}
				break;
			case 4:
				{
				_localctx = new FEqualContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(73); ((FEqualContext)_localctx).left = rp(0);
				setState(74); match(EQ);
				setState(75); ((FEqualContext)_localctx).right = rp(0);
				}
				break;
			case 5:
				{
				_localctx = new FIsContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(77); ((FIsContext)_localctx).left = rp(0);
				setState(78); match(EQUALITY);
				setState(79); ((FIsContext)_localctx).right = rp(0);
				}
				break;
			case 6:
				{
				_localctx = new FIsContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(81); ((FIsContext)_localctx).left = rp(0);
				setState(82); match(IS);
				setState(83); ((FIsContext)_localctx).right = rp(0);
				}
				break;
			case 7:
				{
				_localctx = new FBracketContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(85); match(OPENBRACKET);
				setState(86); f(0);
				setState(87); match(CLOSEBRACKET);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(99);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(97);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new FAndContext(new FContext(_parentctx, _parentState));
						((FAndContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_f);
						setState(91);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(92); match(AND);
						setState(93); ((FAndContext)_localctx).right = f(4);
						}
						break;
					case 2:
						{
						_localctx = new FOrContext(new FContext(_parentctx, _parentState));
						((FOrContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_f);
						setState(94);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(95); match(OR);
						setState(96); ((FOrContext)_localctx).right = f(3);
						}
						break;
					}
					} 
				}
				setState(101);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ForClauseContext extends ParserRuleContext {
		public List<TerminalNode> IN() { return getTokens(XQParser.IN); }
		public TerminalNode IN(int i) {
			return getToken(XQParser.IN, i);
		}
		public TerminalNode FOR() { return getToken(XQParser.FOR, 0); }
		public List<XqContext> xq() {
			return getRuleContexts(XqContext.class);
		}
		public List<TerminalNode> COMMA() { return getTokens(XQParser.COMMA); }
		public List<TerminalNode> VARNAME() { return getTokens(XQParser.VARNAME); }
		public TerminalNode COMMA(int i) {
			return getToken(XQParser.COMMA, i);
		}
		public XqContext xq(int i) {
			return getRuleContext(XqContext.class,i);
		}
		public TerminalNode VARNAME(int i) {
			return getToken(XQParser.VARNAME, i);
		}
		public ForClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterForClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitForClause(this);
		}
	}

	public final ForClauseContext forClause() throws RecognitionException {
		ForClauseContext _localctx = new ForClauseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_forClause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102); match(FOR);
			setState(103); match(VARNAME);
			setState(104); match(IN);
			setState(105); xq(0);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(106); match(COMMA);
				setState(107); match(VARNAME);
				setState(108); match(IN);
				setState(109); xq(0);
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LetClauseContext extends ParserRuleContext {
		public TerminalNode LET() { return getToken(XQParser.LET, 0); }
		public List<XqContext> xq() {
			return getRuleContexts(XqContext.class);
		}
		public List<TerminalNode> ASSIGN() { return getTokens(XQParser.ASSIGN); }
		public List<TerminalNode> COMMA() { return getTokens(XQParser.COMMA); }
		public TerminalNode ASSIGN(int i) {
			return getToken(XQParser.ASSIGN, i);
		}
		public List<TerminalNode> VARNAME() { return getTokens(XQParser.VARNAME); }
		public TerminalNode COMMA(int i) {
			return getToken(XQParser.COMMA, i);
		}
		public XqContext xq(int i) {
			return getRuleContext(XqContext.class,i);
		}
		public TerminalNode VARNAME(int i) {
			return getToken(XQParser.VARNAME, i);
		}
		public LetClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_letClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterLetClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitLetClause(this);
		}
	}
